--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-wallet-manager",
-  "version": "0.1.0",
-  "description": "apple wallet",
+  "version": "1.0.0",
+  "description": "Provides some Apple Wallet's functionality, like adding passes, removing passes and checking passises for existing.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -34,7 +34,10 @@
   "keywords": [
     "react-native",
     "ios",
-    "android"
+    "android",
+    "wallet",
+    "apple-wallet",
+    "pkpass"
   ],
   "repository": "https://github.com/dev-family/react-native-wallet-manager",
   "author": "mshekspirtt <mshekspirt@gmail.com> (https://github.com/mshekspirtt)",
