--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-wallet-manager",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Provides some Apple Wallet functionality for IOS and Google Wallet for Android.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -66,7 +66,7 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-builder-bob": "^0.18.0",
+    "react-native-builder-bob": "^0.40.15",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
@@ -140,17 +140,12 @@
     "useTabs": false
   },
   "react-native-builder-bob": {
-    "source": "src",
-    "output": "lib",
-    "targets": [
-      "commonjs",
-      "module",
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json"
-        }
-      ]
-    ]
-  }
+  "source": "src",
+  "output": "lib",
+  "targets": [
+  "commonjs",
+  "module",
+  ["typescript", { "project": "tsconfig.build.json" }]
+]
+}
 }
