--- a/example/package.json
+++ b/example/package.json
@@ -9,15 +9,16 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react": "19.1.1",
+    "react-native": "0.82.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "metro-react-native-babel-preset": "^0.64.0"
+    "@babel/core": "^7.25.2",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/babel-preset": "0.82.1",
+    "@react-native/metro-config": "0.82.1",
+    "react-native-builder-bob": "^0.40.16"
   }
 }
