--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "react-native-wallet-manager",
   "version": "1.1.3",
   "description": "Provides some Apple Wallet functionality for IOS and Google Wallet for Android.",
-  "main": "lib/commonjs/index",
-  "module": "lib/module/index",
+  "source": "src/index.tsx",
+  "main": "lib/commonjs/index.js",
+  "react-native": "src/index.tsx",
+  "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index",
-  "source": "src/index",
   "files": [
     "src",
     "lib",
@@ -27,9 +27,18 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
     "release": "release-it",
+    "start": "react-native start",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods"
+  },
+  "codegenConfig": {
+    "name": "NativeWalletManagerSpec",
+    "type": "modules",
+    "jsSrcsDir": "./src/specs",
+    "android": {
+      "javaPackageName": "com.reactnativewalletmanager"
+    }
   },
   "keywords": [
     "react-native",
@@ -51,29 +60,32 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native/eslint-config": "^0.82.1",
     "@release-it/conventional-changelog": "^2.0.0",
-    "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.1.1",
     "commitlint": "^11.0.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^29.6.3",
     "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "prettier": "2.8.8",
+    "react": "19.1.1",
+    "react-native": "0.82.1",
     "react-native-builder-bob": "^0.40.15",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3"
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
   },
+  "workspaces": [
+    "example"
+  ],
+  "packageManager": "yarn@4.12.0",
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
@@ -112,7 +124,10 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@react-native-community",
+      "@react-native",
+      "prettier"
+    ],
+    "plugins": [
       "prettier"
     ],
     "rules": {
@@ -140,12 +155,17 @@
     "useTabs": false
   },
   "react-native-builder-bob": {
-  "source": "src",
-  "output": "lib",
-  "targets": [
-  "commonjs",
-  "module",
-  ["typescript", { "project": "tsconfig.build.json" }]
-]
-}
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
+  }
 }
